5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1816_2574.log
== TEST (2019-06-11 17:45:54) 
-- CODE:
from numpy import *

s = input("Senha: ")

a = 0
for i in range(len(s)):
	if senha[i] == senha[i].isupper()
		a = a + 1
print(a)
-- ERROR:
File "XXXX", line 7
    if senha[i] == senha[i].isupper()
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:46:02) 
-- CODE:
from numpy import *

s = input("Senha: ")

a = 0
for i in range(len(s)):
	if senha[i] == senha[i].isupper():
		a = a + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:46:21) 
-- CODE:
from numpy import *

senha = input("Senha: ")

a = 0
for i in range(len(s)):
	if senha[i] == senha[i].isupper():
		a = a + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:46:34) 
-- CODE:
from numpy import *

senha = input("Senha: ")

a = 0
for i in range(len(senha)):
	if senha[i] == senha[i].isupper():
		a = a + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:46:38) 
-- CODE:
from numpy import *

senha = input("Senha: ")

a = 0
for i in range(len(senha)):
	if senha[i] == senha[i].isupper():
		a = a + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:47:18) 
-- CODE:
from numpy import *

senha = input("Senha: ")

a = len(senha)
for i in range(len(senha)):
	if senha[i] == senha[i].isupper():
		a = a + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:47:22) 
-- CODE:
from numpy import *

senha = input("Senha: ")

a = len(senha)
for i in range(len(senha)):
	if senha[i] == senha[i].isupper():
		a = a + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:47:29) 
-- CODE:
from numpy import *

senha = input("Senha: ")

a = len(senha)
for i in range(len(senha)):
	if senha[i] == senha[i].isupper():
		a = a + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
